@@ -119,6 +119,10 @@ Imap4::fetch (void)
 		gdk_threads_enter();
 		biff_->applet()->update();
 		gdk_threads_leave();
+
+		// If we have reported the new mail, then set the status to old
+		if (status_ == MAILBOX_NEW)
+			status_ = MAILBOX_OLD;
 	}
 }
 
@@ -598,6 +602,10 @@ Imap4::fetch_header (void)
 				gdk_threads_enter();
 				biff_->applet()->update();
 				gdk_threads_leave();
+
+				// If we have reported the new mail, then set the status to old
+				if (status_ == MAILBOX_NEW)
+					status_ = MAILBOX_OLD;
 			}
 
 			if (timetag_)
